--- a/statefulset.yaml
+++ b/statefulset.yaml
@@ -1,39 +1,40 @@
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres # The name of the StatefulSet
+  name: postgres
 spec:
-  serviceName: postgres # The name of the service this StatefulSet should use
+  serviceName: postgres
   selector:
     matchLabels:
       app: postgres
-  replicas: 1 # Indicates this StatefulSet should only create one instance of the postgres database
+  replicas: 1
   template:
     metadata:
       labels:
         app: postgres
     spec:
       containers:
-        - name: postgres # The name of the Postgres container
-          image: postgres # The image of the Postgres database
-          imagePullPolicy: "IfNotPresent"
+        - name: postgres
+          image: postgres
+          imagePullPolicy: IfNotPresent
           env:
-          - name: POSTGRES_USER
-            valueFrom:
-              secretKeyRef:
-                name: postgres
-                key: postgres_username
-          - name: POSTGRES_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: postgres
-                key: postgres_password
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres
+                  key: postgres_username
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres
+                  key: postgres_password
           ports:
-          - containerPort: 5432 # The port number postgres listens on
-			volumeMounts:
-          - name: data
-            mountPath: /var/lib/postgresql/data # Data should be mounted onto this file path
+            - containerPort: 5432
+          volumeMounts:
+            - name: data
+              mountPath: /var/lib/postgres/data
       volumes:
-      - name: data
-        persistentVolumeClaim:
-          claimName: postgres-volume-claim # Indicates the postgres database should use a PVC called postgres-claim
+        - name: data
+          persistentVolumeClaim:
+            claimName: postgres-volume-claim
